--- a/config.template.json
+++ b/config.template.json
@@ -18,5 +18,8 @@
 		"client_id": "SPOTIFY_CLIENT_ID",
 		"client_secret": "SPOTIFY_CLIENT_SECRET",
 		"redirect_uri": "SPOTIFY_REDIRECT_URI"
+	},
+	"dashboard": {
+		"port": "DASHBOARD_PORT"
 	}
 }
