--- a/package.json
+++ b/package.json
@@ -8,13 +8,26 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "fs-extra": "^11.2.0",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "table": "^6.8.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
